--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8090
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
+
+client.acquirer.baseUrl=http://localhost:8080
