Add default log level to properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 
 client.acquirer.baseUrl=http://localhost:8080
+logging.level.root=INFO
